# scippneutron

./: .buildinfo  .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  Untitled.ipynb  genindex.html  index.html  objects.inv  output.txt  py-modindex.html  pyproject.toml  pyproject.toml.rej  scipp-neutron-latest.yaml  scipp-neutron.yml  scippneutron-developer-latest.yml  scippneutron-developer-linux-test.yml  scippneutron-developer-next.yml  scippneutron-developer-no-mantid-next.yml  scippneutron-developer-no-mantid-test.yml  scippneutron-developer-no-mantid.yml  scippneutron-developer-osx.yml  scippneutron-developer-release.yml  scippneutron-developer-test.yml  scippneutron-developer.yml  scippneutron-latest.yml  scippneutron.yml  search.html  searchindex.js  setup.cfg  setup.cfg.rej  setup.py  tox.ini
.azure-pipelines/: ci.yml  code_quality_checks.yml  documentation_build.yml  latest.yml  main.yml  master.yml  next.yml  package_nightly_and_release.yml  pr_and_main.yml  pull_request.yml  release.yml  units_build.yml
.azure-pipelines/templates/: code_quality_checks.yml  documentation_build.yml  documentation_deploy.yml  (+1 more)
.buildconfig/: ci-linux-39.yml  ci-linux-no-mantid.yml  ci-linux.yml  ci-macos-39.yml  ci-macos.yml  ci-windows-39.yml  ci-windows.yml
.github/: dependabot.yml
_modules/: index.html
_sources/: index.md
_static/: documentation_options.js
about/: bibliography.html  index.html
api-reference/: chopper-cascade.html  frame-unwrapping.html  index.html
benchmark/: CMakeLists.txt  neutron_convert_benchmark.cpp
benchmarks/: conversion.py  load_nexus.py  transform_coords.py
cmake/: IPO.cmake  docs.cmake  docs_build.bat.in  docs_build.sh.in  scipp-install.cmake  scippneutron-config.cmake.in
conda/: bld.bat  build.sh  conda_build_config.yaml  install.py  meta.yaml  meta.yaml.rej  run_test.sh
conda/cmake-package-test/: CMakeLists.txt  build.py  conanfile.txt  main.cpp
developer/: coding-conventions.html  data-stream.html  dependency-management.html  file-loading.html  getting-started.html  index.html
docs/: _typehints.py.rej  about.rst  bibliography.bib  build_and_test.py  build_docs.py  conf.py  conf.py.rej  index.md  index.rst  make_docs.py  version.py
docs/about/: about.rst  (+4 more)
lib/: CMakeLists.txt
lib/cmake/: scipp-install.cmake  scippneutron-config.cmake.in
lib/neutron/: CMakeLists.txt  beamline.cpp  logging.cpp
lib/neutron/include/scipp/neutron/: beamline.h  constants.h  logging.h
lib/neutron/test/: CMakeLists.txt  beamline_test.cpp  constants_test.cpp  test_macros.h
lib/python/: CMakeLists.txt  neutron.cpp  scippneutron.cpp
neutron/: CMakeLists.txt  beamline.cpp  conversions.cpp  convert.cpp  logging.cpp
neutron/imaging/: __init__.py  operations.py
neutron/imaging/tests/: operations_test.py
neutron/include/scipp/neutron/: beamline.h  constants.h  conversions.h  convert.h  logging.h
neutron/test/: CMakeLists.txt  beamline_test.cpp  constants_test.cpp  conversions_test.cpp  convert_test.cpp  test_macros.h
python/: CMakeLists.txt  conversions.cpp  neutron.cpp  scippneutron.cpp
python/src/scippneutron/: __init__.py  _json_loading.py  _loading_common.py  _loading_detector_data.py  _loading_hdf5_nexus.py  _loading_json_nexus.py  _loading_log_data.py  _loading_nexus.py  _loading_positions.py  _loading_transformations.py  _streaming_consumer.py  _streaming_data_buffer.py  conversion.py  convert.py  data_stream.py  instrument_view.py  load_nexus.py  mantid.py  nconvert.py  stream_data.py
python/src/scippneutron/core/: __init__.py  conversion.py
python/src/scippneutron/data/: __init__.py
python/src/scippneutron/data_streaming/: _consumer.py  _consumer_type.py  _data_buffer.py  _data_consumption_manager.py  _data_stream_widget.py  _serialisation.py  _stop_time.py  _warnings.py  data_stream.py
python/src/scippneutron/file_loading/: _common.py  _detector_data.py  _hdf5_nexus.py  _json_nexus.py  _log_data.py  _monitor_data.py  _nexus.py  _positions.py  _sample.py  _transformations.py  load_nexus.py
python/src/scippneutron/tof/: conversions.py
python/tests/: convert_test.py  mantid_data_helper.py  mantid_scipp_comparison.py  nexus_helpers.py  test_data_stream.py  test_histogram_events.py  test_instrument_view.py  test_load_nexus.py  test_load_nexus_json.py  test_load_nexus_metadata.py  test_mantid.py  test_neutron.py  test_neutron_convert_units.py
python/tests/mantid_scipp_comparison/: mantid_scipp_comparison.py  test_beamline_calculations.py  test_histogram_events.py  test_neutron_convert_units.py
python/tests/tof/: conversions_test.py
requirements/: base.in  base.in.rej  base.txt  basetest.in  basetest.txt  ci.in  ci.txt  dev.in  dev.in.rej  dev.txt  docs.in  docs.txt  make_base.py  mypy.in  mypy.txt  nightly.in  nightly.txt  static.in  static.txt  sync_versions.py  test.in  test.txt  wheels.txt
rust/: Cargo.toml
rust/src/: alg1.rs  alg2.rs  grid.rs  lib.rs
tests/: beamline_components_test.py  common.py  conftest.py  convert_test.py  data_stream_test.py  externalfile.py  instrument_view_test.py  load_nexus_json_test.py  load_nexus_test.py  load_nxdetector_test.py  mantid_helper.py  mantid_test.py  masking_tool_test.py  nexus_helpers.py  nexus_test.py  nxdata_test.py  nxdetector_test.py  nxtransformations_test.py  package_test.py  test_data_stream.py  test_instrument_view.py  test_load_nexus.py  test_load_nexus_json.py  test_mantid.py  test_neutron.py  test_nexus.py  test_nexus_loader_components.py  test_nxdetector.py
tools/: atomic_weights.ipynb  build.py  build_conda.py  build_cpp.py  detector_test_trajectories.py  make_and_install.bat  make_and_install.sh  make_tutorial_data.ipynb  metatoenv.py  pre_docs.py  pre_docs.sh  run-tests.sh.in
tutorials/: 3_understanding-event-data.html  index.html  powder-diffraction.html
user-guide/: absorption-correction.html  coordinate-transformations.html  from-mantid-to-scipp.html  groupby.html  index.html  installation.html  instrument-view.html  masking-tool.html  recipes.html
(+365 files in other folders)
